labs/level3-container-k8s/lab09-ingress-tls-irsa/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: order-app
  labels:
    name: order-app
    environment: dev
