labs/level3-container-k8s/lab09-ingress-tls-irsa/kubernetes/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-app-service
  namespace: order-app
spec:
  type: ClusterIP
  selector:
    app: order-app
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
