labs/level3-container-k8s/lab09-ingress-tls-irsa/kubernetes/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-app-ingress
  namespace: order-app
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
spec:
  tls:
    - hosts:
        - order.starkcloud.io
      secretName: order-tls-secret
  rules:
    - host: order.starkcloud.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-app-service
                port:
                  number: 80
